# MetaStuff

./: .gitignore  CMakeLists.txt  README.md
example/: CMakeLists.txt  JsonCast.inl  Person.h  main.cpp
exampleCpp17/: JsonCast.h  JsonCast.inl  StringCast.cpp  main.cpp
include/: Member.h  Member.inl  Meta.h  Meta.inl  template_helpers.inl
